--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,25 +22,31 @@
             android:text="@string/app_name"
             android:textColor="@android:color/white"
             android:textSize="23sp" />
+
+        <ImageView
+            android:id="@+id/profilePic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:src="@android:drawable/ic_menu_compass" />
     </androidx.appcompat.widget.Toolbar>
 
     <FrameLayout
+        android:id="@+id/fragmentContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar"
         android:layout_above="@+id/bottomNavigation"
-        android:id="@+id/fragmentContainer"
-        />
+        android:layout_below="@+id/toolbar" />
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
         app:itemIconTint="@color/blueGray600"
         app:itemTextColor="@color/blueGray600"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
         app:menu="@menu/navbar_menu" />
 
 </RelativeLayout>
