--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -20,6 +20,7 @@
             app:titleTextColor="@android:color/white">
 
             <info.androidhive.fontawesome.FontTextView
+                android:id="@+id/account_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
@@ -35,7 +36,6 @@
                 android:layout_height="?attr/actionBarSize"
                 android:layout_gravity="end"
                 android:layout_marginEnd="10dp"
-                android:src="https://i.stack.imgur.com/w4K9I.png"
                 app:civ_border_color="#FF000000"
                 app:civ_border_width="2dp" />
         </androidx.appcompat.widget.Toolbar>
