--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -3,32 +3,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_navigation"
-    app:startDestination="@id/mainFragment">
-
+    app:startDestination="@id/homeFragment">
     <fragment
-        android:id="@+id/loginFragment"
-        android:name="com.treflor.ui.login.LoginFragment"
-        android:label="fragment_login"
-        tools:layout="@layout/fragment_login" />
+        android:id="@+id/routesFragment"
+        android:name="com.treflor.ui.routes.RoutesFragment"
+        android:label="routes_fragment"
+        tools:layout="@layout/routes_fragment" />
     <fragment
-        android:id="@+id/profileFragment"
-        android:name="com.treflor.ui.profile.ProfileFragment"
-        android:label="profile_fragment"
-        tools:layout="@layout/profile_fragment" />
+        android:id="@+id/cameraFragment"
+        android:name="com.treflor.ui.camera.CameraFragment"
+        android:label="camera_fragment"
+        tools:layout="@layout/camera_fragment" />
     <fragment
-        android:id="@+id/mainFragment"
-        android:name="com.treflor.ui.main.MainFragment"
-        android:label="fragment_main"
-        tools:layout="@layout/fragment_main" >
-        <action
-            android:id="@+id/action_mainFragment_to_loginFragment"
-            app:destination="@id/loginFragment"
-            app:enterAnim="@anim/slide_in_down"
-            app:exitAnim="@anim/fade_out"
-            app:popEnterAnim="@anim/fade_in"
-            app:popExitAnim="@anim/slide_out_down"/>
-        <action
-            android:id="@+id/action_mainFragment_to_profileFragment"
-            app:destination="@id/profileFragment" />
-    </fragment>
+        android:id="@+id/menuFragment"
+        android:name="com.treflor.ui.menu.MenuFragment"
+        android:label="fragment_menu"
+        tools:layout="@layout/fragment_menu" />
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.treflor.ui.home.HomeFragment"
+        android:label="home_fragment"
+        tools:layout="@layout/home_fragment" />
+    <fragment
+        android:id="@+id/journeyFragment"
+        android:name="com.treflor.ui.journey.JourneyFragment"
+        android:label="journey_fragment"
+        tools:layout="@layout/journey_fragment" />
 </navigation>
