--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -22,6 +22,14 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorPrimary">
 
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/profile_image"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="end"
+                android:layout_marginEnd="10sp"
+                android:visibility="gone" />
+
             <info.androidhive.fontawesome.FontTextView
                 android:id="@+id/account_icon"
                 android:layout_width="wrap_content"
@@ -31,6 +39,7 @@
                 android:text="@string/fa_user_circle"
                 android:textColor="#fff"
                 android:textSize="30sp"
+                android:visibility="visible"
                 app:solid_icon="true" />
 
         </androidx.appcompat.widget.Toolbar>
