--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -22,25 +22,6 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorPrimary">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/profile_image"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="end"
-                android:layout_marginEnd="10sp"
-                android:visibility="gone" />
-
-            <info.androidhive.fontawesome.FontTextView
-                android:id="@+id/account_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_marginEnd="10sp"
-                android:text="@string/fa_user_circle"
-                android:textColor="#fff"
-                android:textSize="30sp"
-                android:visibility="visible"
-                app:solid_icon="true" />
 
         </androidx.appcompat.widget.Toolbar>
 
@@ -48,7 +29,7 @@
             android:id="@+id/test_user"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{user.toString()}" />
+            android:text="Home" />
 
     </LinearLayout>
 </layout>
