--- a/app/src/main/res/menu/bottom_bar_nav.xml
+++ b/app/src/main/res/menu/bottom_bar_nav.xml
@@ -6,7 +6,7 @@
         android:title="Home" />
     <item
         android:id="@+id/journeyFragment"
-        android:icon="@drawable/ic_route"
+        android:icon="@drawable/ic_place_black_24dp"
         android:title="Journey" />
     <item
         android:id="@+id/cameraFragment"
@@ -14,10 +14,10 @@
         android:title="Camera" />
     <item
         android:id="@+id/profileFragment"
-        android:icon="@drawable/ic_user"
+        android:icon="@drawable/ic_person"
         android:title="Account" />
     <item
         android:id="@+id/menuFragment"
-        android:icon="@drawable/ic_cogwheel"
+        android:icon="@drawable/ic_settings_black_24dp"
         android:title="Settings" />
 </menu>
