--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -14,15 +14,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="40dp"
         tools:context=".ui.login.LoginFragment">
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:indeterminate="true" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="40dp">
 
             <EditText
                 android:id="@+id/txt_email"
@@ -42,7 +49,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Sign in"/>
+                android:text="Sign in" />
 
             <Button
                 android:id="@+id/btn_sign_up"
@@ -50,7 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginBottom="40dp"
-                android:text="Sign up"/>
+                android:text="Sign up" />
 
             <com.google.android.gms.common.SignInButton
                 android:id="@+id/btn_google_sign_in"
@@ -58,6 +65,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 app:setOnClickListener="@{(v) -> viewModel.signInWithGoogle()}" />
+
         </LinearLayout>
     </RelativeLayout>
 </layout>
