--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -31,6 +31,13 @@
             android:orientation="vertical"
             android:padding="40dp">
 
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_gravity="center_horizontal"
+                android:paddingBottom="20dp"
+                android:src="@drawable/ic_person" />
+
             <EditText
                 android:id="@+id/txt_email"
                 android:layout_width="match_parent"
