--- a/app/src/main/res/layout/journey_fragment.xml
+++ b/app/src/main/res/layout/journey_fragment.xml
@@ -5,9 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".ui.journey.JourneyFragment">
 
-    <TextView
+    <com.google.android.libraries.maps.MapView
+        android:id="@+id/journey_map"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello journey" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
