--- a/app/src/main/res/layout/journey_fragment.xml
+++ b/app/src/main/res/layout/journey_fragment.xml
@@ -10,4 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <TextView
+        android:id="@+id/txt_permission"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Permission not granted!"
+        android:visibility="gone" />
+
 </FrameLayout>
