--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#081e6f</color>
+    <color name="colorPrimary">#081E6F</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="BtnGrey">#EEEEEE</color>
+    <color name="TextClr">#80000000</color>
 
 
 </resources>
